--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 * {
   margin: 0;
 }
+
+.app-header-image {
+  background-color: white;
+  object-fit: contain;
+  padding: 20px;
+  border-bottom: 1px solid lightgray;
+}
+
+.app {
+  background-color: #fafafa;
+
+}
