--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,18 @@
   margin: 0;
 }
 
-.app-header-image {
+.app-header {
   background-color: white;
   object-fit: contain;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+}
+
+.app-header-image {
+  object-fit: contain;
+
 }
 
 .app {
