--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
   border-bottom: 1px solid lightgray;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .app-header-image {
