--- a/src/Post.css
+++ b/src/Post.css
@@ -26,3 +26,27 @@
 .post-avatar {
   margin-right: 10px;
 }
+
+.post-comments {
+  display: flex;
+  margin-top: 10px;
+}
+
+.post-input {
+  border: none;
+  flex: 1;
+  padding: 10px;
+  border-top: 1px solid lightgray;
+}
+
+.post-button {
+  flex: 0;
+  border: none;
+  border-top: 1px solid lightgray;
+  background-color: transparent;
+  color: #6082a3;
+}
+
+.post-comment-box {
+  padding: 20px;
+}
